Bug 339466 - Labels are cut off in qtwebkit listboxes
Summary: Labels are cut off in qtwebkit listboxes
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: QStyle (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Hugo Pereira Da Costa
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-09-27 19:01 UTC by Antonio Rojas
Modified: 2023-04-18 15:46 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (16.54 KB, image/png)
2014-09-27 19:01 UTC, Antonio Rojas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2014-09-27 19:01:07 UTC
Using the breeze style, labels in listboxes are cut off, see screenshot. Happens in both kde4 (konqueror+kwebkitpart) and qt5 (qupzilla) versions. It does not affect khtml.

Reproducible: Always
Comment 1 Antonio Rojas 2014-09-27 19:01:28 UTC
Created attachment 88864 [details]
screenshot
Comment 2 Hugo Pereira Da Costa 2014-09-28 11:48:52 UTC
Confirmed. Will fix (this is due to some installed ItemViewDelegate)
Comment 3 Hugo Pereira Da Costa 2014-09-29 07:08:42 UTC
Git commit e4ffbade2f210df8898c43468453eca51ab9daa9 by Hugo Pereira Da Costa.
Committed on 29/09/2014 at 07:05.
Pushed by hpereiradacosta into branch 'Plasma/5.1'.

Added hasParent method
Do not add ItemDelegate to combobox views if inside QWebView, because ItemDelegate handling is broken in
Qt for such widgets

M  +6    -3    kstyle/breezestyle.cpp
M  +33   -0    kstyle/breezestyle.h

http://commits.kde.org/breeze/e4ffbade2f210df8898c43468453eca51ab9daa9
Comment 4 Hugo Pereira Da Costa 2014-09-29 14:15:40 UTC
Git commit bf46bbaf04f69eb71a9400d6a6a7a142f1ee9b2e by Hugo Pereira Da Costa.
Committed on 29/09/2014 at 14:12.
Pushed by hpereiradacosta into branch 'Plasma/5.1'.

Added hasParent method Do not add ItemDelegate to combobox views if inside QWebView, because ItemDelegate handling is broken in Qt for such widgets

M  +6    -3    kstyle/oxygenstyle.cpp
M  +33   -1    kstyle/oxygenstyle.h

http://commits.kde.org/oxygen/bf46bbaf04f69eb71a9400d6a6a7a142f1ee9b2e
Comment 5 Hugo Pereira Da Costa 2014-09-29 14:15:41 UTC
Git commit ec69ec9fc5bfb62bd514c913feaadeff3fbdbdd7 by Hugo Pereira Da Costa.
Committed on 29/09/2014 at 14:12.
Pushed by hpereiradacosta into branch 'master'.

Added hasParent method Do not add ItemDelegate to combobox views if inside QWebView, because ItemDelegate handling is broken in Qt for such widgets

M  +6    -3    kstyle/oxygenstyle.cpp
M  +33   -1    kstyle/oxygenstyle.h

http://commits.kde.org/oxygen/ec69ec9fc5bfb62bd514c913feaadeff3fbdbdd7
Comment 6 ratijas 2023-04-18 15:46:17 UTC
So, we never reported the bug upstream, added a workaround to Oxygen, forked Oxygen to create Breeze, and now, ten years later, I'm wondering whether we still need to traverse entire chain of ComboBoxes' parents on each polish().

What would be the best way to test it today?