Added hasParent method Do not add ItemDelegate to combobox views if inside QWebView, because ItemDelegate handling is broken in Qt for such widgets

BUG: 339466